--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!doctype html>
+<html>
+  <head>
+    <title> HTML COURSE</title>
+  </head>
+  <body>
+    <h1>WEB COURSE</h1>
+    <p> Loving this course</p>
+    </body>
+  
+</html>
