--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello Course</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>HELLO COURSE</h1>
+<h1 style="text-align: center;">HELLO COURSE</h1>
 <p>This course is great</p>
+<ul>
+	<li><a href="/">Home</a></li>
+	<li><a href="https://www.youtube.com/">Youtube</a></li>
+</ul>
+<section>
+	<div>div 1</div>
+	<div>div 2</div>
+	<div>div 3</div>
+	<div>div 4</div>
+</section>
 </body>
 </html>
